Fix spawned chat messages on iOS Safari

--- a/src/assets/stylesheets/presence-log.scss
+++ b/src/assets/stylesheets/presence-log.scss
@@ -173,7 +173,7 @@
 
 :local(.presence-log-spawn) {
   position: absolute;
-  top: 0;
+  bottom: 0;
   z-index: -10;
   width: auto;
   margin: 0;
